--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
  - docker build -t akys/react-test -f ./client/Dockerfile.dev ./client
 
 script:
- - docker run akys/react-test npm test -- --coverage
+ - docker run -e CI=true akys/react-test npm test
 
 after_success:
  - docker build -t akys/multi-client ./client
