--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
  - docker build -t akystech/multi-server ./server
  - docker build -t akystech/multi-worker ./worker
  # Docker login
- - echo "$DOCKER_PASSWORD" | docker login -username "$DOCKER_ID" --password-stdin
+ - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_ID" --password-stdin
  # Take those images and push them to docker hub
  - docker push akystech/multi-client
  - docker push akystech/multi-nginx
