OK added deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,18 @@ after_success:
  - docker push akystech/multi-nginx
  - docker push akystech/multi-server
  - docker push akystech/multi-worker
+
+deploy:
+ edge: true
+ provider: elasticbeanstalk
+ region: us-east-1
+ app: multi-docker
+ env: MultiDocker-env
+ bucket_name: elasticbeanstalk-us-east-1-237593621846
+ bucket_path: docker-multi
+ on: 
+  branch: master
+ access_key_id: $AWS_ACCESS_KEY
+ secret_access_key: $AWS_SECRET_KEY
+ 
+ 
